update text and schedule

--- a/index.html
+++ b/index.html
@@ -56,9 +56,6 @@
                         <a class="page-scroll" href="#schedule">Schedule</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#reference">Reference</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="#hostedby">Hosted By</a>
                     </li>
                 </ul>
@@ -73,7 +70,8 @@
             <div class="header-content-inner">
                 <img src="/img/logo.png" alt="UV" />
                 <hr class="clear">
-                <p>A conference about interoperability</p>
+                <p>A conference about the past, present, and future of Universal Viewer</p>
+                <p>18 November, 2025</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
@@ -86,13 +84,10 @@
                     <h2 class="section-heading">About</h2>
                     <hr class="primary">
                     <p>
-                        The <a href="http://universalviewer.io">Universal Viewer</a> has a growing community of adopters, from national libraries and museums to one-person projects. It is made for simple, consistent presentation and sharing of digitised books, artworks, archives, audio, video and 3D objects.
+                        The <a href="http://universalviewer.io"><strong>Universal Viewer</strong></a> has an active and diverse community of users, from national libraries and museums to one-person projects. It is made for simple, consistent presentation and sharing of digitised books, artworks, archives, audio, video and 3D objects.
                     </p>
                     <p>
-                        The Universal Viewer is also built from parts that can be assembled to produce different user experiences for other audiences. 
-                    </p>
-                    <p>
-                        Join us for two days of conversation at the Victoria and Albert Museum to discuss the Universal Viewer's future design, features and development process.
+                        Join us online on the 18th of November to discuss the Universal Viewer's history, recent improvements, and how you can help shape its future development.
                     </p>
                 </div>
             </div>
@@ -106,35 +101,53 @@
                     <h2 class="section-heading">Schedule</h2>
                     <hr class="light">
 
-                    <em>There are three separate events over two days, all available via Eventbrite.</em>
-
-                    <h3>Day One (20th March 2018)</h3>
+                    <h3>18th of November, 2025</h3>
+                    <h3>14:00–18:00 UTC</h3>
                     <p>
-                        <a href="https://www.eventbrite.co.uk/e/uvcon-morning-seminar-tickets-42786808496">Morning Seminar</a>
-                        <em>A brief overview of the current design and features of the Universal Viewer, including recent IIIF AV support, aimed at a general audience.</em>
+                        <u><h4>14:00</h4></u>
+                        <em>Welcome & Introductions</em>
+                        <p>Erin Burnand</p>
                     </p>
                     <p>
-                        <a href="https://www.eventbrite.co.uk/e/uvcon-working-meeting-ux-day-tickets-42349282845">User Experience Working Meeting</a>
-                        <em>For product owners, user experience practitioners and other product stakeholders. We'll be reviewing new design proposals and exploring the feature roadmap of the Universal Viewer.</em>
+                        <u></uv><h4>14:10</h4></u>
+                        <em>Keynote</em>
+                        <p>Edward Silverton</p>
                     </p>
-
-                    <h3>Day Two (21st March 2018)</h3>
                     <p>
-                        <a href="https://www.eventbrite.co.uk/e/uvcon-working-meeting-tech-day-tickets-42637329400">Technical Working Meeting</a>
-                        <em>For developers and other technical stakeholders. We'll be looking at component architecture and technical design choices, and deciding on a strategy for testing, documentation and versioning that works for all the Universal Viewer's adopters.</em>
+                        <u><h4>14:20</h4></p></u>
+                        <em>Developing a Community</em>
+                        <p>UV Steering Group</p>
                     </p>
-                </div>
-            </div>
-        </div>
-    </section>
+                    <p>
+                        <u><h4>14:40</h4></u>
+                        <h4>LIGHTNING TALKS</h4>
 
-    <section id="reference">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Reference</h2>
-                    <hr class="primary">
-                    <a href="https://github.com/UniversalViewer/universalviewer/projects/5">Topics for discussion board</a>
+
+                    <em>The UV Team at the British Library</em> | James Misson</br>
+                    <em>Testing the UV</em> | Lanie Okorodudu</br>
+                    <em>Making archives accessible with HTR and the Universal Viewer</em> | Linnéa Karlberg Lundin</br>
+                    <em>The UV and User Experience</em> | Mia Ridge</br>
+                    </p>
+                    <p>
+                        <u><h4>15:20</h4></u>
+                        <h4>BREAK</h4>
+                    </p>
+                                        <p>
+                        <u><h4>15:35</h4></u>
+                        <h4>BREAKOUT SESSIONS</h4>
+                        <em>Technical Track</em>: The future of UV's codebase</br>
+                        <em>Admin Track</em>: The future of UV's community and website</br>
+
+                    </p>
+                    <p>
+                        <u><h4>16:35</h4></u>
+                        <h4>BREAK</h4>
+                    </p>
+                    <p>
+                        <u><h4>16:50</h4></u>
+                        <h4>Discussion & Closing Remarks</h4>
+                    </p>
+
                 </div>
             </div>
         </div>
@@ -144,22 +157,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Hosted By</h2>
-                    <hr class="primary">
-                    <p>UVCON is held at the V&A as part of the V&A Research Institute (VARI), a five-year programme of research projects and partnerships supported by the Andrew W. Mellon Foundation. It takes the V&A's pioneering research culture into a new phase that allows the Museum to experiment with new ways of studying, displaying and accessibly storing its collections. VARI will give better access to the V&A's objects and join its experts with academic scholars, practicing artists, designers and makers and members of the general public.</p>
-                    <p>Universal Viewer will be particularly used by two VARI projects:,</p>
-                    <p>
-                    <a href="https://www.vam.ac.uk/info/deciphering-dickens">https://www.vam.ac.uk/info/deciphering-dickens</a><br/>
-                    Deciphering Dickens, an unparalleled collection of original manuscripts and proofs for most of Dickens' novels;
-                    </p>
-                    <p>
-                    <a href="https://www.vam.ac.uk/info/leman-album-an-enhanced-facsimile">https://www.vam.ac.uk/info/leman-album-an-enhanced-facsimile</a><br/>
-                    The Leman Album, an 18th-century volume containing Europe's earliest dated silk designs - close to 100 astonishingly vibrant drawings on paper.
-                    </p>
-                    <p>
-                    You can find out more about our individual projects on our webpages:
-                    <a href="https://www.vam.ac.uk/vari">https://www.vam.ac.uk/vari</a>
-                    </p>
+                    <p>UVCON 2025 is hosted online by the Universal Viewer Steering Group, a community led initiative that supports open, sustainable development of the Universal Viewer and related digital projects.</p>
+                    <p>UCVON and the Universal Viewer community are sustained through shared effort and open support. If you would like to help us ensure ongoing development of the Universal Viewer you can contribute via the Open Collective. Your contribution helps fund development, community events and training that keeps the viewer open and available to all </p>
+                    <p><a href="https://opencollective.com/universalviewer">Support on Open Collective</a></p>
                 </div>
             </div>
         </div>
