--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                     <p>
                         The <a href="http://universalviewer.io"><strong>Universal Viewer</strong></a> has an active and diverse community of users, from national libraries and museums to one-person projects. It is made for simple, consistent presentation and sharing of digitised books, artworks, archives, audio, video and 3D objects.
                     </p>
-                    <p>
-                        Join us online on the 18th of November to discuss the Universal Viewer's history, recent improvements, and how you can help shape its future development.
+                   <a href="https://www.eventbrite.com/e/universal-viewer-uv-annual-conference-2025-tickets-1967619306312?aff=oddtdtcreator"><strong>Sign up here</strong></a>
+                            to join us online on the 18th of November to discuss the Universal Viewer's history, recent improvements, and how you can help shape its future development.
                     </p>
                 </div>
             </div>
@@ -196,3 +196,4 @@
 </body>
 
 </html>
+
